--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,19 @@
 {
     "compilerOptions": {
-        "outDir": "./dist",
-        "baseUrl": ".",
-        "inlineSources": true,
+        "rootDir": "src",
+        "target": "es5",
+        "esModuleInterop": true,
+        "forceConsistentCasingInFileNames": true,
+        "strict": true,
+        "skipLibCheck": true,
+        "jsx": "react",
         "module": "ESNext",
-        "target": "ES6",
-        "allowJs": true,
-        "noImplicitAny": true,
-        "moduleResolution": "node",
-        "importHelpers": true,
-        "isolatedModules": true,
-        "strictNullChecks": true,
         "declaration": true,
-        "declarationMap": true,
-        "lib": [
-            "DOM",
-            "ES5",
-            "ES6",
-            "ES7"
-        ]
-    },
-    "extends": "@tsconfig/svelte/tsconfig.json",
-    "include": [
-        "**/globals.d.ts",
-        "**/*.js",
-        "**/*.svelte",
-        "**/*.ts"
-    ]
+        "declarationDir": "types",
+        "sourceMap": true,
+        "outDir": "dist",
+        "moduleResolution": "node",
+        "allowSyntheticDefaultImports": true,
+        "emitDeclarationOnly": true
+    }
 }
