--- a/package.json
+++ b/package.json
@@ -13,9 +13,9 @@
         "@rollup/plugin-node-resolve": "^13.0.6",
         "@rollup/plugin-typescript": "^8.3.0",
         "@types/react": "^18.2.22",
-        "eslint": "^8.49.0",
         "@typescript-eslint/eslint-plugin": "^6.7.2",
         "@typescript-eslint/parser": "^6.7.2",
+        "eslint": "^8.49.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-airbnb-typescript": "^17.1.0",
         "eslint-plugin-import": "^2.28.1",
@@ -31,7 +31,8 @@
     "dependencies": {
         "obsidian": "latest",
         "obsidian-dataview": "0.5.56",
-        "react": "^18.2.0"
+        "react": "^18.2.0",
+        "yaml": "^2.3.2"
     },
     "main": "dist/cjs/index.js",
     "module": "dist/esm/index.js",
