--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@rollup/plugin-node-resolve": "^13.0.6",
         "@rollup/plugin-typescript": "^8.3.0",
         "@types/react": "^18.2.22",
+        "@types/react-dom": "^18.2.7",
         "@typescript-eslint/eslint-plugin": "^6.7.2",
         "@typescript-eslint/parser": "^6.7.2",
         "eslint": "^8.49.0",
@@ -32,6 +33,7 @@
         "obsidian": "latest",
         "obsidian-dataview": "0.5.56",
         "react": "^18.2.0",
+        "react-dom": "^18.2.0",
         "yaml": "^2.3.2"
     },
     "main": "dist/cjs/index.js",
